--- a/views/404.pug
+++ b/views/404.pug
@@ -1,2 +1,5 @@
-h1=$title
-p HTTP 404, this page could not be found...
+extends layout
+
+block content
+    h2 HTTP 404
+    p This page could not be found...
