Added a few more test issues

--- a/views/index.pug
+++ b/views/index.pug
@@ -25,6 +25,7 @@ block content
                 option(value="all" selected=$params['type'] == 'all') all
                 option(value="bug" selected=$params['type'] == 'bug') bug
                 option(value="annoyance" selected=$params['type'] == 'annoyance') annoyance
+                option(value="comingsoon" selected=$params['type'] == 'comingsoon') comingsoon
         .input
             label(for="issue_game") Game:
             select#issue_game(name="issue_game")
