--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,9 +1,9 @@
 html
     head
         title #{$title}
-        block scripts
-            link(rel="stylesheet", href="/static/norm.css")
-            link(rel="stylesheet", href="/static/style.css")
+        script(src='/static/script.js')
+        link(rel="stylesheet", href="/static/norm.css")
+        link(rel="stylesheet", href="/static/style.css")
     body
         .container
             header
@@ -16,4 +16,4 @@ html
                 p 
                     | Fork on 
                     a(href="https://github.com/YarmoM/DicePlease") Github
-                    |  /// No tracking or JS on this website
+                    |  /// No tracking on this website
